# DNS-Benchmark

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
Docs/: ARCHITECTURE.md  BUILD.md  ENGINE.md  I18N.md  TESTING.md  THEME.md  UI.md
data/: dnsbenchmark.desktop  resolvers_default.tsv  test_domains.txt
po/: DNS-Benchmark.pot  dnsbenchmark.pot  nb.po
scripts/: build-appimage.sh
src/: main.c
src/dns/: packet.c  packet.h  transport.h  transport_doh.c  transport_dot.c  transport_tcp.c  transport_udp.c
src/engine/: engine.c  engine.h  stats.c  stats.h
src/io/: csv_export.c  csv_export.h  resolvers_io.c  resolvers_io.h
src/net/: socket_compat.c  socket_compat.h  time_ns.c  time_ns.h
src/platform/: sysresolvers.h  sysresolvers_linux.c  sysresolvers_win.c
src/ui/: chart.c  chart.h  model_cols.h  tab_conclusions.c  tab_conclusions.h  tab_help.c  tab_help.h  tab_intro.c  tab_intro.h  tab_nameservers.c  tab_nameservers.h  tab_tabular.c  tab_tabular.h  theme.c  theme.h  window.c  window.h
src/util/: i18n.c  i18n.h  log.c  log.h  strings.c  strings.h
tests/: CMakeLists.txt  smoke_engine.c  smoke_live.c  smoke_transports.c  test_dns_packet.c  test_resolvers_io.c  test_stats.c
